css/styles.css
body {
  background-color: lightgreen;
  background-image: url('../img/young_tranplants.avif');
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-position: center;
  background-size: 100%;
  font-family: Helvetica;
}

.bg {
  background-color: rgba(255, 255, 255, .4);
  height: 100vh;
}

.sidebar {
  height: 100%;
  width: 180px;
  position: fixed;
  background: rgba(144, 238, 144, .7);
  padding-top: 20px;
  text-align: center;
}

.sidebar a {
  padding: 8px;
  text-decoration-line: underline;
  color: forestgreen;
  display: block;
  font-style: italic;
}

.sidebar a:hover {
  color: white;
}

.space {
  padding-top: 45px;
}

.main {
  margin-left: 180px;
  padding: 30px;
}

.main h1 {
  text-align: center;
  padding-bottom: 30px;
}

.highlight {
  color: yellow;
}

.about {
  margin-left: 180px;
  padding: 30px;
  padding-top: 200px; 
}

.me {
  width: 25%;
  float: right;
}

